--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,44 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
+    <string-array name="toilet">
+        <item>Yes</item>
+        <item>No</item>
+    </string-array>
+    <string-array name="classs">
+        <item >Tiny Tots MT</item>
+        <item >Sr.Kg</item>
+        <item >Jr.Kg</item>
+        <item >Nursery</item>
+        <item >Tiny Tots</item>
+    </string-array>
+    <string-array name="batch">
+        <item>Morning</item>
+        <item>Noon</item>
+    </string-array>
+    <string-array name="term">
+        <item>Full</item>
+        <item>Mid</item>
+    </string-array>
+    <string-array name="bloodgroup">
+        <item >AB-</item>
+        <item >AB+</item>
+        <item >O-</item>
+        <item >O+</item>
+        <item >B-</item>
+        <item  >B+</item>
+        <item  >A-</item>
+        <item >A+</item>
+    </string-array>
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+    <string-array name="size">
+    <item >S</item>
+    <item >M</item>
+    <item >L</item>
+    <item >XL</item>
+    <item >XXL</item>
+    </string-array>
 </resources>
